--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # jdbc:mysql://localhost:3306/[DABASE_NAME]
-spring.datasource.url=jdbc:mysql://localhost:3306/itspectraats
+spring.datasource.url=jdbc:mysql://localhost:3306/chilipo_college
 spring.datasource.username=root
 spring.datasource.password=
 
