--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # jdbc:mysql://localhost:3306/[DABASE_NAME]
 spring.datasource.url=jdbc:mysql://localhost:3306/chilipo_college
@@ -10,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create-drop
 
-spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
