--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
-
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-# jdbc:mysql://localhost:3306/[DABASE_NAME]
-spring.datasource.url=jdbc:mysql://localhost:3306/chilipo_college
-spring.datasource.username=root
-spring.datasource.password=
-
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:postgresql://localhost:5432/chilipo_college_database
+spring.datasource.username=chilipo_college_database
+spring.datasource.password=admin
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto=create
+
+# Set the default schema
+spring.jpa.properties.hibernate.default_schema=chilipo_college_schema
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.thymeleaf.cache=false
-spring.thymeleaf.suffix: .html
+spring.thymeleaf.suffix=.html
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 # In order to omit _embedded in all responses there is need to add
-#spring.hateoas.use-hal-as-default-json-media-type=false
+# spring.hateoas.use-hal-as-default-json-media-type=false
