added docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/chilipo_college_database
+spring.datasource.url=postgres://chilipo_college_database:98ofapcCKdWx0GUNvjYnGpkn77s7N2vJ@dpg-cmmk4s021fec73cmbosg-a.oregon-postgres.render.com/chilipo_college_database
 spring.datasource.username=chilipo_college_database
-spring.datasource.password=admin
+spring.datasource.password=98ofapcCKdWx0GUNvjYnGpkn77s7N2vJ
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
