added docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=postgres://chilipo_college_database:98ofapcCKdWx0GUNvjYnGpkn77s7N2vJ@dpg-cmmk4s021fec73cmbosg-a.oregon-postgres.render.com/chilipo_college_database
+spring.datasource.url=jdbc:postgresql://dpg-cmmk4s021fec73cmbosg-a.oregon-postgres.render.com:5432/chilipo_college_database
 spring.datasource.username=chilipo_college_database
 spring.datasource.password=98ofapcCKdWx0GUNvjYnGpkn77s7N2vJ
 
@@ -20,5 +20,5 @@ spring.thymeleaf.suffix=.html
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-# In order to omit _embedded in all responses there is need to add
+# In order to omit _embedded in all responses, there is a need to add
 # spring.hateoas.use-hal-as-default-json-media-type=false
