--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
 # Set the default schema
-spring.jpa.properties.hibernate.default_schema=chilipo_college_schema
+#spring.jpa.properties.hibernate.default_schema=chilipo_college_schema
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=false
