--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://dpg-cmmk4s021fec73cmbosg-a.oregon-postgres.render.com:5432/chilipo_college_database
+spring.datasource.url=jdbc:postgresql://dpg-cmmk4s021fec73cmbosg-a/chilipo_college_database
 spring.datasource.username=chilipo_college_database
 spring.datasource.password=98ofapcCKdWx0GUNvjYnGpkn77s7N2vJ
 
