--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-hibernate5</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
 
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
